--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.4",
+    "moment": "^2.30.1",
     "react": "^19.2.4",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
